--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+# VsCode
+.vscode/
+
+# Other
+php/
+python/
+
